# personal_lego_inventory

./: LICENSE  README.md
backend_lego_personal_inventory/: .gitignore  Dockerfile  database.db  docker-compose.yaml  entrypoint.sh  pyproject.toml
backend_lego_personal_inventory/backend_lego_personal_inventory/: app.py  database.py  models.py  schemas.py  security.py  testando.py
backend_lego_personal_inventory/backend_lego_personal_inventory/routers/: auth.py  todos.py  users.py
backend_lego_personal_inventory/migrations/: env.py
backend_lego_personal_inventory/migrations/versions/: 05afdc9bdfc8_create_users_table.py  25347f241359_create_users_table.py  369b2fecbcd6_exercicio_02_aula_04.py  4c73f738c223_create_users_table.py  58850e3055a5_fix.py  5ee0bb61bd88_create_todos_table.py  e2e2e24040fb_create_todos_table.py
backend_lego_personal_inventory/tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
frontend_lego_personal_inventory/: index.html  package.json
frontend_lego_personal_inventory/src/: App.tsx  routes.tsx
frontend_lego_personal_inventory/src/pages/: Home.tsx  Home2.tsx
lego_inventory/: pyproject.toml
