[project]
name = "lego-inventory"
version = "0.1.0"
description = "A application to organize your lego pieces"
authors = [
    {name = "Luis Altissimo",email = "altissimoluis@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.*"
dependencies = [
]

[tool.poetry]
packages = [{include = "lego_inventory", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
